--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,37 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html {
+  background: url(./images/city.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.overlay {
+  content:" ";
+  top:0;
+  left:0;
+  /* width:100%;
+  height:100%; */
+  /* display: block; */
+  z-index:2;
+  background: rgba(0,0,0,0.5);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
