--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
   padding: 0;
   border: 0;
   outline: 0;
-  font-size: 100%;
   vertical-align: baseline;
   background: transparent;
 }
@@ -11,6 +10,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
+  color: white;
 }
 
 html {
@@ -25,13 +25,88 @@ html {
   content:" ";
   top:0;
   left:0;
-  /* width:100%;
-  height:100%; */
-  /* display: block; */
   z-index:2;
   background: rgba(0,0,0,0.5);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -220px;
+  margin-left: -115px;
+}
+
+span,input {
+	border:2px solid rgba(255,255,255,.8);
+	font-size:1.25em;
+	padding:.25em .5em .3125em;
+	color:rgba(255,255,255,1);
+	border-radius:.25em;
+	background:transparent;
+	transition:all .100s;
+
+  &:focus{
+    outline:none;
+    color:rgb(255,255,255);
+    border-color:rgb(255,255,255);
+  }
+
+  &.keyup {
+    color:white;
+    border-color:white;
+    text-shadow:0 0 .125em white;
+    box-shadow:0 0 .25em white,inset 0 0 .25em white;
+  }
+}
+canvas {
+	position:absolute;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	pointer-events:none;
+}
+
+input, body {
+	font-family: "Arial Rounded MT Bold","Helvetica Rounded",Arial,sans-serif;
+}
+
+$placeholder-color:rgb(255,255,255);
+
+::-webkit-input-placeholder {
+    color:white;
+    opacity: 0.8;
+    text-align: center;
+}
+
+::-moz-placeholder {
+    color:white;
+    opacity: 0.8;
+    text-align: center;
+}
+
+::-ms-placeholder {
+    color:white;
+    opacity: 0.8;
+    text-align: center;
+}
+
+::placeholder {
+    color:white;
+    opacity: 0.8;
+    text-align: center;
+}
+
+html,body {
+	height:100%;
+	overflow:hidden;
+}
+
+body {
+  line-height: 1.5;
 }
